--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/LuyoloLuja/settings-bill-expressjs#readme",
   "dependencies": {
-    "chalk": "^4.1.0"
+    "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
+    "express-handlebars": "^5.1.0"
   }
 }
