--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "express-handlebars": "^5.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^8.1.2"
   }
 }
